# SnapSVG

./: .gitignore  AGENTS.md  App.tsx  DEVELOPMENT.md  README.md  index.css  index.html  metadata.json  package-lock.json  package.json  tailwind.config.cjs  types.ts  vite.config.ts
components/: Canvas.tsx  Sidebar.tsx  Slider.tsx
public/wasm/: package.json  snapsvg_core.d.ts  snapsvg_core.js  snapsvg_core_bg.wasm  snapsvg_core_bg.wasm.d.ts
public/wasm/snippets/wasm-bindgen-rayon-38edf6e439f6d70d/src/: workerHelpers.js
scripts/: build-wasm.sh
services/: aiService.ts  mockVTracer.ts  samplingPrecacher.ts  taskScheduler.ts  tracer.worker.ts  workerPool.ts
src-rust/: Cargo.toml
src-rust/.cargo/: config.toml
src-rust/src/: lib.rs
utils/: svgParser.ts
