[package]
name = "snapsvg-core"
version = "0.1.0"
edition = "2021"
description = "SnapSVG 核心矢量化引擎 - WASM 版本"
authors = ["SnapSVG Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
vtracer = "0.6"
image = "0.24"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"      # 优化文件大小
lto = true           # 链接时优化
