[package]
name = "snapsvg-core"
version = "0.1.0"
edition = "2021"
description = "SnapSVG 核心矢量化引擎 - WASM 版本"
authors = ["SnapSVG Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = "1.2"
vtracer = "0.6"
image = "0.24"
fastrand = "2.3"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = 3        # 最高速度优化（矢量化是 CPU 密集型）
lto = true           # 链接时优化
codegen-units = 1    # 更好的优化（牺牲编译时间）
